--- a/projectC/templates/index.html
+++ b/projectC/templates/index.html
@@ -24,7 +24,7 @@
             </nav>
         </header>
         <main role="main" id="main">
-
+            {% include 'block.html' %}
         </main>
         <footer></footer>
     </div>
