--- a/projectC/templates/layout.html
+++ b/projectC/templates/layout.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
-    <link href="{{ url_for('static', path='/layout.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', path='/layout.css')}}" rel="stylesheet">
     <title>소카우넷</title>
     <style>
     </style>
@@ -20,7 +20,7 @@
         <header id="intro">
             <nav id="navigation">
                 <ul>
-                    <li class="one"><a href="/">메인</a></li>
+                    <li class="one"><a href="/layout.html">메인</a></li>
                     <li class="two"><a href="/1">정보</a></li>
                     <li class="three"><a href="/2">영상</a></li>
                 </ul>
