--- a/projectC/templates/main.j2
+++ b/projectC/templates/main.j2
@@ -1,4 +1,4 @@
-{% extends "index.html" %}
+{% extends "layout.html" %}
 {% block style %}
 <link href="{{ url_for('static', path='/main.css') }}" rel="stylesheet">
 {% endblock %}
