--- a/projectC/templates/layout.html
+++ b/projectC/templates/layout.html
@@ -20,7 +20,7 @@
         <header id="intro">
             <nav id="navigation">
                 <ul>
-                    <li class="one"><a href="/layout.html">메인</a></li>
+                    <li class="one"><a href="/index">메인</a></li>
                     <li class="two"><a href="/1">정보</a></li>
                     <li class="three"><a href="/2">영상</a></li>
                 </ul>
