--- a/projectC/static/graph.css
+++ b/projectC/static/graph.css
@@ -1,23 +1,55 @@
 article {
-    margin-top: 50px;
+    margin-top: 30px;
     margin-bottom: 50px;
 }
-
 article div {
-    float: right;
     text-align: center;
-    display: inline;
-    margin-right: 10px;
 }
-
-article div.inputDate {
-    float: left;
-}
-
-form.option {
-    float: right;
-}
-
 input {
     font-size: 20px;
+}
+
+
+/* 방 선택 */
+.selectRoom {
+    margin: 0 auto;
+    display: block;
+    width: 100%;
+}
+
+
+/* 시간 단위 선택 */
+.unitOfTime {
+    width: 100%;
+}
+.unitOfTime div {
+    display: inline;
+}
+
+
+/* 기간 입력 */
+.inputDate {
+    margin-top: 15px;
+    width: 100%;
+}
+.inputDate form {
+    margin-top: 15px;
+    display: block;
+    width: 100%;
+}
+#selectStartTime {
+    display: none;
+}
+#selectEndTime {
+    display: none;
+}
+
+/* 데이터 종류 선택 */
+.dataType {
+    margin-top: 15px;
+    display: block;
+    width: 100%;
+}
+.dataType div {
+    display: inline;
 }
