--- a/projectC/static/layout.css
+++ b/projectC/static/layout.css
@@ -48,7 +48,7 @@ li {
 }
 
 #intro nav ul li.one {
-    width: 50%;
+    width: 55%;
 }
 
 #intro nav ul li.one a{
@@ -56,25 +56,28 @@ li {
     margin-left: 10px;
     font-family: 'Noto Sans KR', sans-serif;
     font-size: 30px;
+    color: rgb(74, 146, 44);
 }
 
 #intro nav ul li.two {
-    width: 25%;
+    width: 22.5%;
+    white-space:nowrap;
 }
 
 #intro nav ul li.three {
-    width: 25%;
+    width: 22.5%;
+    white-space:nowrap;
 }
 
 #intro nav ul li a {
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bold;
     display: block;
     line-height: 80px;
 }
 
 /* main */
-#main {
+/* #main {
     background-color: rgb(250, 250, 250);
     ;
-}
+} */
