Update Header navigation

--- a/projectC/templates/graph.j2
+++ b/projectC/templates/graph.j2
@@ -6,9 +6,9 @@
 <article class="one">
     <div class="selectRoom">
         <select id="roomNum">
-            <option value="1">1번 방</option>
-            <option value="2">2번 방</option>
-            <option value="3">3번 방</option>
+            <option value="1">1번 CCTV</option>
+            <option value="2">2번 CCTV</option>
+            <option value="3">3번 CCTV</option>
         </select>
     </div>
     <div class="inputDate">
