--- a/projectC/templates/layout.html
+++ b/projectC/templates/layout.html
@@ -21,8 +21,8 @@
             <nav id="navigation">
                 <ul>
                     <li class="one"><a href="/graph">SoCowNet</a></li>
-                    <li class="two"><a href="/graph">한우 정보</a></li>
-                    <li class="three"><a href="/cctv">CCTV</a></li>
+                    <li class="two"><a href="/graph">한우 생체 분석</a></li>
+                    <li class="three"><a href="/cctv">실시간 모니터링</a></li>
                 </ul>
             </nav>
         </header>
