--- a/projectC/static/graph.css
+++ b/projectC/static/graph.css
@@ -49,6 +49,12 @@ input {
 #selectEndTime2 {
     display: none;
 }
+#selectStartTime3 {
+    display: none;
+}
+#selectEndTime3 {
+    display: none;
+}
 
 /* 데이터 종류 선택 */
 .dataType {
