--- a/projectC/templates/test.html
+++ b/projectC/templates/test.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <video width="1200" controls muted="muted">
-            <source src="http://localhost:8000/video/video" type="video/mp4" />
+            <source src="/video/video" type="video/mp4" />
         </video>
     </body>
 </html>
