--- a/projectC/templates/graph.j2
+++ b/projectC/templates/graph.j2
@@ -128,6 +128,7 @@
 {% block script %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 <script type="text/javascript">
+    /* 식사량 차트  */
     let foodChart = new Chart(document.getElementById("chartOne"), {
         type: 'line',
         data: {
