--- a/projectC/templates/test.j2
+++ b/projectC/templates/test.j2
@@ -5,8 +5,7 @@
 {# {{ url_for('static', path='testvideo.webm') }} #}
 {# <video src="/video/video" width="500" height="300" controls autoplay muted>
 </video> #}
-<video src="/video/mapvideo" type="video/webm" width="500" height="300" controls autoplay muted>
-</video>
+<img src="{{ url_for('stream_video') }}" width="100%">
 {% endblock %}
 {% block script %}
 {% endblock %}
