--- a/projectC/templates/test.j2
+++ b/projectC/templates/test.j2
@@ -1,11 +1,23 @@
 {% extends "layout.html" %}
 {% block style %}
+<style>
+#cctv {
+    width: 95%;
+    height: 400px;
+    margin: 0 auto;
+    margin-top: 10px;
+}
+</style>
 {% endblock %}
 {% block main %}
 {# {{ url_for('static', path='testvideo.webm') }} #}
-{# <video src="/video/video" width="500" height="300" controls autoplay muted>
+{# <video src="/video/mapvideo" width="500" height="300" controls autoplay muted>
 </video> #}
-<img src="{{ url_for('stream_video') }}" width="100%">
+<article class="cctvContent">
+    <div id="cctv">
+        <img src="{{ url_for('stream_video') }}" width="100%">
+    </div>
+</article>
 {% endblock %}
 {% block script %}
 {% endblock %}
