--- a/projectC/static/graph.css
+++ b/projectC/static/graph.css
@@ -2,19 +2,119 @@ article {
     margin-top: 30px;
     margin-bottom: 50px;
 }
+
 article div {
     text-align: center;
 }
+
 input {
     font-size: 20px;
 }
 
 
 /* 방 선택 */
-.selectCCTV {
-    margin: 0 auto;
+#defaultCCTV label {
     display: block;
     width: 100%;
+    height: 100%
+}
+
+#cctv1 {
+    height: 35px;
+}
+
+#cctv2 {
+    height: 35px;
+}
+
+#cctv3 {
+    height: 35px;
+}
+
+#cctvBtn1 {
+    display: none;
+}
+
+#cctvBtn2 {
+    display: none;
+}
+
+#cctvBtn3 {
+    display: none;
+}
+
+#cctvList label {
+    display: block;
+    width: 100%;
+    height: 100%;
+    line-height: 35px;
+    cursor: pointer;
+}
+
+#cctvMenu {
+    width: 200px;
+    height: 50px;
+    font-size: 20px;
+    font-weight: bold;
+    position: relative;
+    margin: 0 auto;
+    text-align: center;
+    border-radius: 15px;
+    background-color: rgb(74, 146, 44);
+}
+
+#defaultCCTV {
+    height: 100%;
+    line-height: 50px;
+}
+
+#cctvLabel {
+    display: block;
+    white-space: nowrap;
+    cursor: pointer;
+}
+
+#defaultText {
+    font-family: 'Noto Sans KR', sans-serif;
+    color: white;
+    display: inline;
+}
+
+#arrow {
+    display: inline;
+    float: right;
+}
+
+#cctvListFrame {
+    display: none;
+    width: 100%;
+    background-color: white;
+    border-radius: 15px;
+    border: 0.1px solid whitesmoke;
+    box-shadow: 0 4px 5px 0 #00000026;
+    z-index: 3;
+    margin-top: 2px;
+    position: absolute;
+}
+
+/* #cctvMenu:hover > #cctvListFrame {
+    display:block;
+} */
+
+/* 차트 프레임 */
+.chartFrame {
+    border-radius: 15px;
+    border: 1px solid #87878726;
+    box-shadow: 0 4px 5px 0 #00000026;
+    width: 95%;
+    margin: 0 auto;
+    margin-top: 10px;
+}
+#chartImg {
+    background-color: rgb(74, 146, 44);
+    margin: 10px 0px 0px 10px;
+    border-radius: 15px;
+    float: left;
 }
 
 
@@ -22,6 +122,7 @@ input {
 .unitOfTime {
     width: 100%;
 }
+
 .unitOfTime div {
     display: inline;
 }
@@ -32,26 +133,33 @@ input {
     margin-top: 15px;
     width: 100%;
 }
+
 .inputDate form {
     margin-top: 15px;
     display: block;
     width: 100%;
 }
+
 #selectStartTime {
     display: none;
 }
+
 #selectEndTime {
     display: none;
 }
+
 #selectStartTime2 {
     display: none;
 }
+
 #selectEndTime2 {
     display: none;
 }
+
 #selectStartTime3 {
     display: none;
 }
+
 #selectEndTime3 {
     display: none;
 }
@@ -62,6 +170,7 @@ input {
     display: block;
     width: 100%;
 }
+
 .dataType div {
     display: inline;
 }
