--- a/projectC/templates/live.j2
+++ b/projectC/templates/live.j2
@@ -1,24 +1,49 @@
 {% extends "layout.html" %}
 {% block style %}
-<link href="/static/live.css" rel="stylesheet">
+<link href="{{ url_for('static', path='live.css')}}" rel="stylesheet">
 {% endblock %}
 {% block main %}
 <article class="cctvContent">
-    <div class="selectCCTV">
-        <select id="CCTVNum" onchange="changeCCTVNum()">
-            <option value="1">1번 CCTV</option>
-            <option value="2">2번 CCTV</option>
-            <option value="3">3번 CCTV</option>
-        </select>
+    <div id="cctvMenu">
+        <div id="defaultCCTV">
+            <label id="cctvLabel">
+                <input type="checkbox" id="checkVisible" onchange="changeVisible()" style="display: none;">
+                <p id="defaultText">1번 CCTV</p>
+                <img id="arrow" src="{{ url_for('static', path='/img/outline_expand_more_white_24dp.png') }}">
+            </label>
+        </div>
+        <div id="cctvListFrame">
+            <ul id="cctvList">
+                <li id="cctv1">
+                    <label>
+                        <input type="radio" name="cctvNum" id="cctvBtn1" value="1" onchange="changeCCTV(0)" checked>
+                        1번 CCTV
+                    </label>
+                </li>
+                <li id="cctv2">
+                    <label>
+                        <input type="radio" name="cctvNum" id="cctvBtn2" onchange="changeCCTV(1)" value="2">
+                        2번 CCTV
+                    </label>
+                </li>
+                <li id="cctv3">
+                    <label>
+                        <input type="radio" name="cctvNum" id="cctvBtn3" onchange="changeCCTV(2)" value="3">
+                        3번 CCTV
+                    </label>
+                </li>
+            </ul>
+        </div>
     </div>
     <div id="cctv">
         <img id="cctvImg" src="{{ url_for('stream_video') }}" width="100%">
     </div>
     <div id="map">
-        <img id="mapImg" src="/static/img/1.png" width="100%">
+        <canvas id="mapCanvas" style="border: 2px solid black">
+        </canvas>
     </div>
 </article>
 {% endblock %}
 {% block script %}
-<script src="/static/live.js"></script>
+<script src="{{ url_for('static', path='live.js')}}"></script>
 {% endblock %}
