--- a/projectC/templates/test.j2
+++ b/projectC/templates/test.j2
@@ -11,13 +11,13 @@
 {% endblock %}
 {% block main %}
 {# {{ url_for('static', path='testvideo.webm') }} #}
-{# <video src="/video/mapvideo" width="500" height="300" controls autoplay muted>
-</video> #}
-<article class="cctvContent">
+<video src="http://192.168.70.209:9876/cow/cow" media_type="video/mp4" width="500" height="300" controls autoplay muted>
+</video>
+{# <article class="cctvContent">
     <div id="cctv">
-        <img src="{{ url_for('stream_video') }}" width="100%">
+        <img src="/video/mapvideo" width="100%">
     </div>
-</article>
+</article> #}
 {% endblock %}
 {% block script %}
 {% endblock %}
