--- a/projectC/templates/graph.j2
+++ b/projectC/templates/graph.j2
@@ -36,8 +36,8 @@
         </div>
     </div>
     <div class="chartFrame">
-        <img id="chartImg" src="{{ url_for('static', path='/img/outline_bar_chart_white_24dp.png') }}">
-        <p>식사량</p>
+        <img class="chartImg" src="{{ url_for('static', path='/img/outline_bar_chart_white_24dp.png') }}">
+        <p class="typeOfData">식사량</p>
         <div class="inputDate">
             <div class="unitOfTime">
                 <div>
@@ -76,8 +76,8 @@
 
 <article id="two">
     <div class="chartFrame">
-        <img id="chartImg" src="{{ url_for('static', path='/img/outline_bar_chart_white_24dp.png') }}">
-        <p>활동량</p>
+        <img class="chartImg" src="{{ url_for('static', path='/img/outline_bar_chart_white_24dp.png') }}">
+        <p class="typeOfData">활동량</p>
         <div class="inputDate">
             <div class="unitOfTime">
                 <div>
@@ -117,8 +117,8 @@
 
 <article id="three">
     <div class="chartFrame">
-        <img id="chartImg" src="{{ url_for('static', path='/img/outline_bar_chart_white_24dp.png') }}">
-        <p>음수량</p>
+        <img class="chartImg" src="{{ url_for('static', path='/img/outline_bar_chart_white_24dp.png') }}">
+        <p class="typeOfData">음수량</p>
 
         <div class="inputDate">
             <div class="unitOfTime">
