--- a/projectC/static/layout.css
+++ b/projectC/static/layout.css
@@ -1,4 +1,7 @@
 /* Default */
+html {
+    background-color: #FFEEE4;
+}
 * {
     margin: 0;
     padding: 0;
@@ -26,11 +29,18 @@ li {
     list-style: none;
 }
 
+#color {
+    background-color: #f94e3f
+    #e77e4d
+    #e3632d
+    #6f2108;
+}
+
 /* header */
 #intro {
     width: 100%;
     height: 80px;
-    background-color: whitesmoke;
+    background-color: #C65146;
 }
 
 #intro nav {
@@ -57,7 +67,7 @@ li {
     margin-left: 10px;
     font-family: 'Noto Sans KR', sans-serif;
     font-size: 30px;
-    color: rgb(74, 146, 44);
+    color: #FFEEE4;
 }
 
 #intro nav ul li.two {
@@ -71,10 +81,12 @@ li {
 }
 
 #intro nav ul li a {
+    font-family: 'Noto Sans KR', sans-serif;
     font-size: 15px;
     font-weight: bold;
     display: block;
     line-height: 80px;
+    color: #FFEEE4;
 }
 
 /* main */
