--- a/projectC/static/live.css
+++ b/projectC/static/live.css
@@ -101,7 +101,8 @@ article div {
     margin-top: 10px;
 }
 #mapCanvas {
-    width: 95%;
+    width: 640px;
+    height: 480px;
     margin: 0 auto;
     margin-top: 20px;
 }
